# src/main/kotlin/com/ctacek/f2g/api/v1/requests/rooms/CreateRoomRequest.kt
@@ -1,19 +1,14 @@
 package com.ctacek.f2g.api.v1.requests.rooms
 
+import com.ctacek.f2g.utils.LocalDateSerializer
 import kotlinx.serialization.SerialName
 import kotlinx.serialization.Serializable
-import com.ctacek.f2g.utils.LocalDateSerializer
 import java.time.LocalDate
 
 @Serializable
 data class CreateRoomRequest(
     @SerialName("room_name")
-    val name: String,
+    val username: String,
     val password: String?,
-    val date:
-        @Serializable(with = LocalDateSerializer::class)
-        LocalDate?,
-    @SerialName("max_price") val maxPrice: Int?,
-    @SerialName("playable_owner") val playableOwner: Boolean,
-    @SerialName("wishlist") val wishList: String?,
+    val date: @Serializable(with = LocalDateSerializer::class) LocalDate?,
 )
