# src/main/kotlin/com/ctacek/f2g/api/v1/responses/InfoDetails.kt
@@ -1,9 +1,9 @@
 package com.ctacek.f2g.api.v1.responses
 
-import kotlinx.serialization.SerialName
-import kotlinx.serialization.Serializable
 import com.ctacek.f2g.domain.entities.UserDTO
 import com.ctacek.f2g.utils.LocalDateSerializer
+import kotlinx.serialization.SerialName
+import kotlinx.serialization.Serializable
 import java.time.LocalDate
 
 @Serializable
@@ -11,10 +11,6 @@ data class InfoDetails(
     @SerialName("room_id") val roomId: String,
     @SerialName("room_name") val roomName: String,
     @SerialName("owner_id") val ownerId: String,
-    val date:
-        @Serializable(with = LocalDateSerializer::class)
-        LocalDate?,
-    @SerialName("max_price") val maxPrice: Int?,
+    val date: @Serializable(with = LocalDateSerializer::class) LocalDate?,
     val users: List<UserDTO.UserRoomInfo>,
-    val recipient: String? = null,
 )
