# src/main/resources/openapi/documentation.yaml
@@ -4,9 +4,18 @@ info:
   description: "F2GBackend API"
   version: "2.0.0"
 servers:
-  - url: "https://"
+  - url: "https://158.160.91.75:8080"
 paths:
-  /api/v1/auth/email/login:
+  /api/v1/movies/random:
+    get:
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/TokenPair"
+  /api/v1/auth/username/login:
     post:
       description: ""
       responses:
@@ -40,7 +49,7 @@ paths:
               examples:
                 Example#1:
                   value: "Wrong password or email"
-  /api/v1/auth/email/register:
+  /api/v1/auth/username/register:
     post:
       description: ""
       responses:
@@ -909,6 +918,25 @@ components:
           type: "string"
         refreshToken:
           $ref: "#/components/schemas/RefreshToken"
+    MoviesCollections:
+      type: "object"
+      properties:
+        items:
+          type: "array"
+          items:
+            $ref: "#/components/schemas/Movie"
+    Movie:
+      type: "object"
+      properties:
+        filmId:
+          type: "integer"
+          format: "int64"
+        nameRu:
+          type: "string"
+        nameEn:
+          type: "string"
+        posterUrl:
+          type: "string"
     AvatarDTO:
       type: "object"
       properties:
@@ -924,14 +952,8 @@ components:
           type: "string"
         username:
           type: "string"
-        address:
-          type: "string"
-        wishlist:
-          type: "string"
         avatar:
           type: "string"
-        accepted:
-          type: "boolean"
     InfoDetails:
       type: "object"
       properties:
@@ -944,9 +966,6 @@ components:
         date:
           type: "string"
           format: "date"
-        maxPrice:
-          type: "integer"
-          format: "int32"
         users:
           type: "array"
           items:
@@ -965,11 +984,6 @@ components:
           format: "date"
         ownerId:
           type: "string"
-        playableOwner:
-          type: "boolean"
-        maxPrice:
-          type: "integer"
-          format: "int32"
         gameStarted:
           type: "boolean"
         membersCount:
@@ -982,33 +996,24 @@ components:
           type: "string"
         username:
           type: "string"
-        email:
-          type: "string"
-        address:
-          type: "string"
         avatar:
           type: "string"
     RoomInfo:
       type: "object"
       properties:
+        id:
+          type: "string"
         name:
           type: "string"
-        id:
+        shortName:
           type: "string"
         date:
           type: "string"
           format: "date"
         ownerId:
           type: "string"
-        playableOwner:
-          type: "boolean"
-        maxPrice:
-          type: "integer"
-          format: "int32"
         gameStarted:
           type: "boolean"
         membersCount:
           type: "integer"
           format: "int32"
-        accepted:
-          type: "boolean"
